--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
