--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.6",
+    "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
