--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "react": "^18.2.0",
