--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "dayjs": "^1.11.10",
     "next": "^14.1.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.0",
     "react-typed": "^2.0.12",
     "redux": "^5.0.1",
