--- a/package.json
+++ b/package.json
@@ -33,10 +33,6 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/cli": "^7.0.0",
-    "@babel/preset-react": "^7.0.0"
+    "eslint-config-next": "14.1.0"
   }
 }
