--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "next": "^14.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
